# compiler-collection

./: CMakeLists.txt  README.md  Readme.md  astdebug_move.patch  draft.sia  first.asm  first.eo  first.ok  first.sal  first.sia  first.tl  test.sh  test_as.sh  test_riscv.sh
compiler/: CMakeLists.txt
compiler/ast/: AstDebug.cpp  AstDebug.hpp  ast.cpp  ast.hpp  ast_builder.cpp  ast_builder.hpp  astdot.cpp
compiler/intr/: expression.cpp  function.cpp  interpreter.cpp  interpreter.hpp
compiler/java/: JavaCompiler.cpp  JavaCompiler.hpp  JavaUtils.cpp
compiler/java/Java/: JavaBuilder.cpp  JavaIR.hpp
compiler/llir/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp
compiler/llvm/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp  Variable.cpp
compiler/midend/: ast_midend.cpp  ast_midend.hpp  parallel_midend.cpp  rebuild_midend.cpp  rebuild_midend.hpp
compiler/parser/: ErrorManager.cpp  ErrorManager.hpp  base_lex.hpp  base_parser.cpp  base_parser.hpp
orka-lang/: CMakeLists.txt  main.cpp  main_java.cpp
orka-lang/lex/: config.py  lex.cpp  lex.hpp  lex_debug.cpp
orka-lang/lex.old/: lex.cpp  lex.hpp
orka-lang/lib.old/: CMakeLists.txt
orka-lang/lib.old/corelib/: io.c
orka-lang/lib/corelib/: CMakeLists.txt  io.c
orka-lang/lib/stdlib/: CMakeLists.txt
orka-lang/midend/: midend.cpp  midend.hpp
orka-lang/parser/: Expression.cpp  Flow.cpp  Function.cpp  Parser.cpp  Parser.hpp  Structure.cpp  Variable.cpp
orka-lang/preproc/: Preproc.cpp
riya-lang/: CMakeLists.txt
riya-lang/lex/: config.py  lex.hpp
riya-lang/midend/: midend.cpp
riya-lang/parser/: Expression.cpp  Function.cpp  Parser.hpp  Variable.cpp
riya-lang/stdlib/: CMakeLists.txt  amd64.asm
riya-lang/stdlib/corelib/: string.c
sia-lang/: CMakeLists.txt  main.cpp
sia-lang/lex/: config.py  lex.cpp  lex.hpp
sia-lang/midend/: midend.cpp  midend.hpp  parallel_midend.cpp  parallel_midend.hpp
sia-lang/parser/: expression.cpp  flow.cpp  function.cpp  parser.cpp  parser.hpp  variable.cpp
src/: CMakeLists.txt  llir_main.cpp  main.cpp  ptasm_main.cpp
src/ast/: AstDebug.cpp  Expression.hpp  Global.hpp  Statement.hpp  Types.hpp  ast.cpp  ast.hpp  ast_builder.cpp  astdot.cpp
src/compiler/LLIR/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp
src/compiler/LLVM/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp  Variable.cpp
src/compiler/PTASM/: compiler.cpp  compiler.hpp  elf.hpp  main.cpp  ptasm.cpp  ptasm.hpp  x86.cpp  x86.hpp
src/debug/: AstDebug.cpp
src/lex/: lex.c  lex.cpp  lex.h  lex_debug.cpp
src/llir/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp
src/midend/: ast_processor.cpp  midend.hpp
src/parser/: Expression.cpp  Flow.cpp  Function.cpp  Parser.cpp  Parser.hpp  Structure.cpp  Variable.cpp
src/preproc/: Preproc.cpp
stdlib/: CMakeLists.txt
stdlib/corelib/: string.c
test/: CMakeLists.txt  first.eo  first.ok  first.ry  first.sia  first.tl  parallel.ok
test/as/: CMakeLists.txt  first.asm
test/basic/: op_pred.tl  uint64_1.tl
test/core/: CMakeLists.txt  associative1.ry  bool1.ry  break.ry  byte1.ry  comma_var1.ry  cond1.ry  cond3.ry  cond4.ry  cond_byte.ry  cond_int64.ry  cond_short.ry  cond_ubyte.ry  cond_uint64.ry  cond_ushort.ry  const1.ry  forall1.ry  lg_or1.ry  nested3.ry  ret_math4.ry  struct1.ry  struct4.ry  uint64_t.ry  ushort1.ry
test/espresso/: CMakeLists.txt  ilogic.eo  imath.eo  test1.eo
test/lex/: CMakeLists.txt
test/llir/: CMakeLists.txt  first.li
test/orka/: CMakeLists.txt  byte1.ok  int64_1.ok  neg1.ok  short1.ok  string1.ok  ushort1.ok
test/orka/array/: CMakeLists.txt  array1.ok  array_func1.ok  char_array1.ok  int64_array1.ok  int64_array2.ok  int_array1.ok  int_array2.ok  sizeof1.ok  str_array1.ok  str_array2.ok  str_array3.ok  uint64_array1.ok  uint64_array2.ok  uint_array1.ok  uint_array2.ok
test/orka/basic/: CMakeLists.txt  bool1.ok  char1.ok  const1.ok  first.ok  math1.ok  op_pred.ok  ubyte1.ok  uint1.ok  uint64_1.ok
test/orka/class/: CMakeLists.txt  class3.ok  class4.ok  extend1.ok
test/orka/cond/: CMakeLists.txt  cond1.ok  cond2.ok  cond3.ok  cond4.ok  cond_byte.ok  cond_int64.ok  cond_short.ok  cond_ubyte.ok  cond_uint64.ok  cond_ushort.ok
test/orka/enum/: CMakeLists.txt  enum1.ok
test/orka/float/: CMakeLists.txt  f32_cond1.ok  f32_cond2.ok  f32_cond3.ok  f32_cond4.ok  f32_cond5.ok  f32_cond6.ok  f32_math1.ok  f64_math1.ok  f64_math2.ok  f64_math3.ok
test/orka/func/: CMakeLists.txt  call1.ok  func_syntax_all.ok
test/orka/java/: CMakeLists.txt  class1.ok  ilogic.ok  imath.ok
test/orka/loop/: CMakeLists.txt  break.ok  continue.ok  for1.ok  forall1.ok  nested2.ok  nested3.ok  repeat1.ok  step1.ok  while1.ok
test/orka/str/: CMakeLists.txt
test/orka/struct/: CMakeLists.txt  struct1.ok  struct2.ok  struct3.ok  struct4.ok
test/orka/syntax/: CMakeLists.txt  comma_var1.ok
test/output/: CMakeLists.txt  func_syntax_all.ry  int64_array1.ry  int_array1.ry  str_array2.ry  test1.ry  uint64_array1.ry
test/riya/core/: CMakeLists.txt  call1.ry  (+9 more)
test/riyai/: CMakeLists.txt  array_len.ry  char1.ry  cond2.ry  func3.ry  func4.ry  func5.ry  func6.ry  func8.ry  func9.ry  func_array2.ry  func_array3.ry  int_array1.ry  iprint1.ry  print_add1.ry  str_array1.ry  string2.ry  string3.ry  string_func1.ry  test1.ry
test/sia/: parfor.sia
test/struct/: struct3.tl
test/tli/: CMakeLists.txt  array1.ry  cond1.ry  func1.ry  func10.ry  func7.ry  func_array1.ry  func_array4.ry  imath1.ry  imath2.ry  int_array2.ry  string1.ry  test2.ry  test3.ry  while1.ry
tiny-lang/: CMakeLists.txt  Readme.md  llir_main.cpp  main.cpp  main_intr.cpp  main_midend.cpp
tiny-lang/lex/: config.py  lex.cpp  lex.hpp
tiny-lang/lex.old/: lex.cpp  lex.hpp  lex_debug.cpp
tiny-lang/midend/: ast_processor.cpp  midend.cpp  midend.hpp  midend1.cpp  midend1.hpp  test_midend.cpp  test_midend.hpp
tiny-lang/parser/: Expression.cpp  Flow.cpp  Function.cpp  Parser.cpp  Parser.hpp  Structure.cpp  Variable.cpp
tiny-lang/preproc/: Preproc.cpp  Preproc.hpp
tiny-lang/stdlib/: CMakeLists.txt
(+158 files in other folders)
